# Velox-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
docs/pull_requests/: pr-042.md
internal/experiments/: fd_offset_indexing.c  recvfrom_addr_handling.c  scratch_probe_12.c
internal/notes/: 09_rpc-channel.md  18_fd-management.md  26_interceptor.md  37_readiness.md  dep_bump_missing.md  dep_upgrade_03.md  final_validation.md  semantic_30.md
release/etc/systemd/system/: veloxd.service.in
src/: velox.h.in
src/interceptor/: CMakeLists.txt  fdchanmap.c  fdchanmap.h  fdpool.c  fdpool.h  interceptor.c  interceptor.h  req-resp-channel.c  req-resp-channel.h
src/rpc/: CMakeLists.txt  rpc.h
src/rpc/c_out/: request.pb-c.c  request.pb-c.h  response.pb-c.c  response.pb-c.h
src/rpc/cpp_out/: request.pb.cc  request.pb.h  response.pb.cc  response.pb.h
src/rpc/proto/: request.proto  response.proto
src/veloxd/: Arbiter.h  CMakeLists.txt  CfgParser.cpp  CfgParser.h  Conf.h  FrameBuf.h  Icmp.h  Interface.h  Ip.h  Logging.cpp  Logging.h  PseudoHdr.h  Session.cpp  Session.h  Tcp.h  Udp.h  Veloxd.cpp  Veloxd.h  main.cpp
src/veloxd/arbiter/: Arbiter.cpp  CMakeLists.txt  Endpoint.cpp  Endpoint.h  EventReactor.h  IoHandle.h  RpcDispatch.cpp  RpcDispatch.h
src/veloxd/arbiter/agent/: AgentChannel.cpp  AgentChannel.h  AgentHub.cpp  AgentHub.h
src/veloxd/arbiter/reactor/: EventReactor.cpp  IoHandle.cpp  SysPoller.cpp  SysPoller.h
src/veloxd/base/: BoundedDeque.h  CMakeLists.txt  Csum16.cpp  Csum16.h  RawMutex.cpp  RawMutex.h  ShellOp.cpp  ShellOp.h  Singleton.h
src/veloxd/interface/: CMakeLists.txt  Interface.cpp  PhysIface.cpp  PhysIface.h  TunIface.cpp  TunIface.h
src/veloxd/ip/: CMakeLists.txt  Fragmenter.h  Ip.cpp  IpHdr.cpp  IpHdr.h  Reassembler.h
src/veloxd/ip/reassembly/: FragGroup.h  Fragmenter.cpp  Reassembler.cpp
src/veloxd/tcp/: CMakeLists.txt  Tcp.cpp  TcpHdr.h  TcpSession.cpp  TcpSession.h  TcpTimer.cpp  TcpTimer.h
src/veloxd/udp/: CMakeLists.txt  Udp.cpp  UdpHdr.h  UdpSession.cpp  UdpSession.h
tests/: CMakeLists.txt  interceptor.conn-udp-test.c  interceptor.fork-test.c  interceptor.multisocket-test.c  interceptor.pthread-test.c  interceptor.tcp-test.c  interceptor.unconn-udp-test.c
tools/: build-debug.sh  build-with-asan.sh  build-with-tsan.sh  strace-curl.sh  wc.sh
